--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "express": "4.16.3",
+    "ignore-styles": "5.0.1",
     "loadable-components": "1.1.1",
     "moment": "2.21.0",
     "morgan": "1.9.0",
     "prop-types": "15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-helmet": "5.2.0",
     "react-hot-loader": "^4.0.0",
     "react-loadable": "5.3.1",
     "react-redux": "5.0.7",
-    "react-router": "3.2.0",
-    "react-router-redux": "4.0.8",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
     "react-scripts": "1.1.1",
     "redux": "3.7.2",
     "redux-devtools": "3.4.1",
@@ -30,7 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "format": "prettier-eslint --write \"src/**/*.{js,jsx}\"",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "NODE_ENV=development node server/index.js",
+    "deploy": "NODE_ENV=production node server/index.js"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
