--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "babel-cli": "6.26.0",
+    "babel-plugin-dynamic-import-node": "1.2.0",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-preset-env": "1.6.1",
     "express": "4.16.3",
     "ignore-styles": "5.0.1",
