--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react": "16.3.0",
     "react-dom": "16.3.0",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "^4.0.0",
+    "react-hot-loader": "4.0.0",
     "react-loadable": "5.3.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
+    "react-router-redux": "5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "3.7.2",
     "redux-devtools": "3.4.1",
