--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "createtest",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:5000"
+    }
+  },
   "dependencies": {
     "babel-cli": "6.26.0",
     "babel-plugin-dynamic-import-node": "1.2.0",
