--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-preset-env": "1.6.1",
     "express": "4.16.3",
+    "glamor": "2.20.40",
+    "glamorous": "4.12.2",
     "ignore-styles": "5.0.1",
     "loadable-components": "1.3.0",
     "morgan": "1.9.0",
