--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "redux-devtools-log-monitor": "1.4.0",
     "redux-logger": "3.0.6",
     "redux-persist": "5.9.1",
-    "redux-thunk": "2.2.0",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2"
+    "redux-thunk": "2.2.0"
   },
   "scripts": {
     "precommit": "lint-staged",
