--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-preset-env": "1.6.1",
     "express": "4.16.3",
-    "glamor": "2.20.40",
-    "glamorous": "4.12.2",
+    "extensible-duck": "1.4.0",
     "ignore-styles": "5.0.1",
     "loadable-components": "1.3.0",
     "morgan": "1.9.0",
@@ -33,28 +32,35 @@
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
     "redux-logger": "3.0.6",
-    "redux-persist": "5.9.1",
-    "redux-thunk": "2.2.0"
+    "redux-saga": "0.16.0",
+    "reselect": "3.0.1",
+    "stylus": "0.54.5",
+    "stylus-loader": "3.0.2",
+    "why-did-you-update": "0.1.1"
   },
   "scripts": {
-    "precommit": "lint-staged",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "format": "prettier-eslint --write \"**/*.{js,jsx}\"",
+    "test": "react-app-rewired test --watchAll --env=jsdom",
+    "format": "prettier-eslint --write \"{src,server}/**/*.{js,jsx}\"",
     "eject": "react-scripts eject",
+    "lint-staged": "lint-staged",
+    "dev": "NODE_ENV=development nodemon server/index.js",
     "serve": "NODE_ENV=development node server/index.js",
     "deploy": "NODE_ENV=production node server/index.js"
   },
+  "pre-commit": "lint-staged",
   "lint-staged": {
-    "src/**/*.{js,jsx}": [
-      "prettier-eslint --write \"src/**/*.{js,jsx}\"",
-      "react-scripts test --env=jsdom",
+    "{src,server}/**/*.js": [
+      "prettier-eslint --write \"{src,server}/**/*.{js,jsx}\"",
       "git add"
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react": "7.7.0",
     "lint-staged": "7.0.4",
+    "pre-commit": "1.2.2",
+    "prettier-eslint-cli": "4.7.1",
     "react-app-rewired": "1.5.0",
     "webpack-dashboard": "1.1.1"
   }
