--- a/.eslintrc
+++ b/.eslintrc
@@ -95,6 +95,12 @@
         "nonwords": false
       }
     ],
+    "no-restricted-syntax": [
+    "warn",
+    {
+        "selector": "CallExpression[callee.object.name='console'][callee.property.name=/^(log|warn|error|info|trace)$/]",
+        "message": "Unexpected property on console object was called"
+    }],
     "object-curly-spacing": ["error", "always"],
     "space-before-function-paren": [
       2,
@@ -179,6 +185,15 @@
       "single",
       {
         "avoidEscape": true
+      }
+    ],
+    "max-len": [
+      "error",
+      {
+      "code": 150,
+      "ignoreUrls": true,
+      "ignoreStrings": true,
+      "ignorePattern": "^\\s*var\\s.+=\\s*require\\s*\\("
       }
     ]
   }
