--- a/package.json
+++ b/package.json
@@ -7,21 +7,46 @@
       "target": "http://localhost:5000"
     }
   },
+  "_moduleAliases": {
+    "utils": "./src/utils",
+    "lib": "./src/lib",
+    "reducers": "./src/reducers",
+    "sagas": "./src/sagas",
+    "components": "./src/components",
+    "containers": "./src/containers",
+    "constants": "./src/constants",
+    "api": "./src/api"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "utils": "<rootDir>/src/utils",
+      "lib": "<rootDir>/src/lib",
+      "reducers": "<rootDir>/src/reducers",
+      "sagas": "<rootDir>/src/sagas",
+      "components": "<rootDir>/src/components",
+      "containers": "<rootDir>/src/containers",
+      "constants": "<rootDir>/src/constants",
+      "api": "<rootDir>/src/api"
+    }
+  },
   "dependencies": {
     "babel-cli": "6.26.0",
     "babel-plugin-dynamic-import-node": "1.2.0",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
+    "compression": "1.7.2",
     "express": "4.16.3",
     "extensible-duck": "1.4.0",
     "ignore-styles": "5.0.1",
-    "loadable-components": "1.4.0",
+    "immer": "1.3.1",
+    "loadable-components": "2.2.2",
+    "module-alias": "2.0.6",
     "morgan": "1.9.0",
     "prop-types": "15.6.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "4.1.2",
+    "react-hot-loader": "4.2.0",
+    "react-loadable": "5.4.0",
     "react-redux": "5.0.7",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
@@ -33,15 +58,16 @@
     "redux-logger": "3.0.6",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2",
+    "sass-loader": "7.0.1",
     "why-did-you-update": "0.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test --watchAll --env=jsdom",
-    "format": "prettier-eslint --write \"{src,server}/**/*.{js,jsx}\"",
+    "test": "eslint . --ext .js && react-app-rewired test --env=jsdom",
+    "debug": "NODE_ENV=debug npm test",
+    "format":
+      "prettier-eslint --write \"{src,server}/**/*.js\" && eslint . --ext .js --fix",
     "eject": "react-scripts eject",
     "lint-staged": "lint-staged",
     "dev": "NODE_ENV=development nodemon server/index.js",
@@ -51,15 +77,19 @@
   "pre-commit": "lint-staged",
   "lint-staged": {
     "{src,server}/**/*.js": [
-      "prettier-eslint --write \"{src,server}/**/*.{js,jsx}\"",
+      "prettier-eslint --write \"{src,server}/**/*.js\"",
+      "eslint . --ext .js --fix",
       "git add"
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "7.7.0",
-    "lint-staged": "7.0.4",
+    "babel-eslint": "8.2.3",
+    "eslint": "4.19.1",
+    "eslint-plugin-react": "7.8.2",
+    "lint-staged": "7.1.2",
     "pre-commit": "1.2.2",
     "prettier-eslint-cli": "4.7.1",
+    "puppeteer": "1.4.0",
     "react-app-rewired": "1.5.2",
     "webpack-dashboard": "1.1.1"
   }
