--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
     "ignore-styles": "5.0.1",
     "immer": "1.3.1",
     "loadable-components": "2.2.2",
-    "module-alias": "2.0.6",
     "morgan": "1.9.0",
-    "prop-types": "15.6.1",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
+    "preact": "8.2.9",
+    "preact-compat": "3.18.0",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "4.2.0",
+    "react-hot-loader": "4.3.3",
     "react-loadable": "5.4.0",
     "react-redux": "5.0.7",
-    "react-router-dom": "4.2.2",
+    "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "react-scripts": "1.1.4",
     "redux": "4.0.0",
@@ -58,8 +59,7 @@
     "redux-logger": "3.0.6",
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
-    "sass-loader": "7.0.1",
-    "why-did-you-update": "0.1.1"
+    "sass-loader": "7.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -75,17 +75,28 @@
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
-    "{src,server}/**/*.js": ["prettier-eslint --write \"{src,server}/**/*.js\"", "eslint . --ext .js --fix", "git add"]
+    "{src,server}/**/*.js": [
+      "prettier-eslint --write \"{src,server}/**/*.js\"",
+      "eslint . --ext .js --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "8.2.6",
+    "babel-plugin-transform-imports": "1.5.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "eslint": "4.19.1",
-    "eslint-plugin-react": "7.8.2",
-    "lint-staged": "7.1.2",
+    "eslint-plugin-react": "7.10.0",
+    "lint-staged": "7.2.0",
+    "module-alias": "2.1.0",
     "pre-commit": "1.2.2",
     "prettier-eslint-cli": "4.7.1",
-    "puppeteer": "1.4.0",
+    "puppeteer": "1.6.0",
+    "react-app-rewire-vendor-splitting": "1.3.0",
     "react-app-rewired": "1.5.2",
-    "webpack-dashboard": "1.1.1"
+    "uglifyjs-webpack-plugin": "1.2.7",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dashboard": "2.0.0",
+    "why-did-you-update": "0.1.1"
   }
 }
