--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "createtest",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:5000"
-    }
-  },
   "_moduleAliases": {
     "utils": "./src/utils",
     "lib": "./src/lib",
@@ -30,36 +25,34 @@
     }
   },
   "dependencies": {
-    "babel-cli": "6.26.0",
-    "babel-plugin-dynamic-import-node": "1.2.0",
     "babel-preset-env": "1.7.0",
-    "compression": "1.7.2",
-    "express": "4.16.3",
+    "compression": "1.7.3",
+    "express": "4.16.4",
     "extensible-duck": "1.4.0",
     "ignore-styles": "5.0.1",
-    "immer": "1.3.1",
-    "loadable-components": "2.2.2",
-    "morgan": "1.9.0",
-    "preact": "8.2.9",
-    "preact-compat": "3.18.0",
+    "immer": "1.7.4",
+    "loadable-components": "2.2.3",
+    "morgan": "1.9.1",
+    "preact": "8.3.1",
+    "preact-compat": "3.18.4",
     "prop-types": "15.6.2",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "4.3.3",
-    "react-loadable": "5.4.0",
-    "react-redux": "5.0.7",
+    "react-hot-loader": "4.3.11",
+    "react-loadable": "5.5.0",
+    "react-redux": "5.1.0",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "1.1.4",
-    "redux": "4.0.0",
+    "react-scripts": "2.0.5",
+    "redux": "4.0.1",
     "redux-devtools": "3.4.1",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.4.0",
     "redux-logger": "3.0.6",
-    "redux-saga": "0.16.0",
-    "reselect": "3.0.1",
-    "sass-loader": "7.0.3"
+    "redux-saga": "0.16.2",
+    "reselect": "4.0.0",
+    "sass-loader": "7.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -82,21 +75,31 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "8.2.6",
-    "babel-plugin-transform-imports": "1.5.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "eslint": "4.19.1",
-    "eslint-plugin-react": "7.10.0",
-    "lint-staged": "7.2.0",
-    "module-alias": "2.1.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.2",
+    "@babel/polyfill": "7.0.0",
+    "@babel/register": "7.0.0",
+    "babel-cli": "6.26.0",
+    "babel-plugin-dynamic-import-node-babel-7": "2.0.7",
+    "babel-plugin-transform-imports": "1.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.19",
+    "customize-cra": "0.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "lint-staged": "7.3.0",
     "pre-commit": "1.2.2",
     "prettier-eslint-cli": "4.7.1",
-    "puppeteer": "1.6.0",
+    "puppeteer": "1.9.0",
     "react-app-rewire-vendor-splitting": "1.3.0",
-    "react-app-rewired": "1.5.2",
-    "uglifyjs-webpack-plugin": "1.2.7",
-    "webpack-bundle-analyzer": "2.13.1",
+    "react-app-rewired": "1.6.2",
+    "uglifyjs-webpack-plugin": "2.0.1",
+    "webpack-bundle-analyzer": "3.0.3",
     "webpack-dashboard": "2.0.0",
     "why-did-you-update": "0.1.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
